--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -147,6 +147,7 @@ Global stylesheet
 @import "partials/modules/social-follow";
 @import "partials/modules/fine-print";
 @import "partials/modules/promo-tile";
+@import "partials/modules/no-content-fallback-msg";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/accordion";
