--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -1,3 +1,15 @@
+<% if @search.products.blank? %>
+
+<%# No product search results message %>
+<div class="no-content-fallback-msg">
+  <span class="icon icon--products icon--flush-top" aria-hidden="true"></span>
+  <p role="status" aria-live="polite"><em class="h1">No products matching <span><%= params[:search_query] %></span></em> <span>See nearby centres</span></p>
+</div>
+<%# //No product search results message %>
+
+<%- else -%>
+
+<%# Pin board %>
 <div id="pin-board" class="pin-board">
   <%- @search.products.each do |result| -%>
     <%= render partial: "/shared/tiles/product",
@@ -5,3 +17,6 @@
         locals: { result: result, image: { href: result.default_image_url, title: result.lozenge_name } } %>
   <%- end -%>
 </div>
+<%# //Pin board %>
+
+<%- end -%>
