fixes header class name relating to banners

--- a/app/views/stores/_header_with_banner.html.erb
+++ b/app/views/stores/_header_with_banner.html.erb
@@ -1,7 +1,6 @@
 <header>
   <h1 class="hide-visually"><%= @store.name %> storefront</h1>
-  <div class="flexslider flexslider--contain-controls is-no-store-banner"
-       style="background-image: url(<%= cl_image_path(@store.storefront) %>);">
+  <div class="flexslider flexslider--contain-controls" style="background-image: url(<%= cl_image_path(@store.storefront) %>);">
     <ul class="slides">
       <li>
         <%= cl_image_tag @store.storefront, alt: "#{@store.name} banner" %>
