--- a/app/views/stores/_header_without_banner.html.erb
+++ b/app/views/stores/_header_without_banner.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <div class="flexslider flexslider--contain-controls">
+  <div class="flexslider flexslider--contain-controls is-no-store-banner">
     <ul class="slides">
       <li>
         <div class="storefront__flexslider-storename vert-align">
