--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -1,8 +1,8 @@
 <% content_for :class_for_body, "national" %>
 
 <%# Background images of the centre tiles at each breakpoint %>
-<% content_for :custom_styles do %>
-  <style>
+<%# content_for :custom_styles do %>
+  <%# <style> %>
   <%# [BACKEND] We need to dynamically generate the class names for each centre and its relevant background image. At the moment this is duplicated from  `_hero_custom_styles.html.erb`. Can we refactor it so we just use same custom styles? %>
 
   <%# Hero image at small breakpoint %>
@@ -24,8 +24,8 @@
     <%# .old-ie .national__centre-tile--bondijunction {
       background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_1600,h_300,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
     }%>
-  </style>
-<% end %>
+  <%# </style> %>
+<%# end %>
 <%# //Background images of centre tiles %>
 
 
@@ -214,7 +214,7 @@
   <%# Footer %>
   <footer class="national__footer" role="contentinfo">
     <div class="container">
-      <ul class="horiz-list--slash">
+      <ul class="national__footer__nav horiz-list--slash">
         <li>
           <a href="http://corporate.westfield.com/" rel="external">Westfild Group</a>
         </li>
@@ -238,7 +238,7 @@
         </li>
       </ul>
 
-      <nav role="navigation">
+      <nav role="navigation" class="national__footer__nav">
         <ul class="horiz-list--slash">
           <li>
             <small>&copy; Westfield <%= Time.now.year %></small>
