Isotope now does not need to wait for image to load

--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -19,4 +19,8 @@
   </div>
   <%# //Pin board %>
 
+  <% if request.xhr? %>
+  <script type="text/javascript">window.initPlugin.isotope();</script>
+  <% end %>
+
 <%- end -%>
